--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ekachai Kanya - Portfolio</title>
+    <meta name="viewport" contentg="width=device-width, initial-scale=1.0">
+    <title>Phanphetthae Srikasem - Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -21,7 +21,7 @@
 
     <header class="hero">
         <div class="hero-content">
-            <h1>Hi, I'm Ekachai Kanya</h1>
+            <h1>Hi, I'm Phanphetthae Srikasem/h1>
             <p>Creative Web Developer & UI/UX Design Enthusiast. Building digital experiences that matter.</p>
             <a href="portfolio.html" class="btn">View My Work</a>
         </div>
@@ -55,8 +55,8 @@
     </section>
 
     <footer>
-        <p>&copy; 2026 Ekachai Kanya. All rights reserved.</p>
-        <p>ekachai.k@bu.ac.th</p>
+        <p>&copy; 2026 Phanphetthae Srikasem. All rights reserved.</p>
+        <p>phanphetthae.srik@bu.ac.th</p>
     </footer>
 
 </body>
