--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <header class="hero">
         <div class="hero-content">
-            <h1>Hi, I'm Phanphetthae Srikasem/h1>
+            <h1>Hi, I'm Phanphetthae Srikasem </h1>
             <p>Creative Web Developer & UI/UX Design Enthusiast. Building digital experiences that matter.</p>
             <a href="portfolio.html" class="btn">View My Work</a>
         </div>
