--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
     </header>
 
     <section class="container">
-        <h2>Featured Work</h2>
+        <h1>Phanphetthae Srikasem</h1>
+        <h1>1670705589</h1>
+        <h1>5/02/2569</h1>
+        <h1>I like a dog without a leaf</h1>
+        <h2>Featured Work</h2>                    
         <div class="grid">
             <div class="card">
                 <img src="assets/project_thumbnail_1.png" alt="Project 1">
